Grid tests for the website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
-<html>
-<body style="background-color: red; color: yellow;">
-<h1>Yo yo</h1>
-<p>My personal website</p>
+<html lang="fr">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="style.css" rel="stylesheet">
+  <title>Christophe Portela personal website</title>
+</head>
+
+<body>
+  <noscript>&lt;strong&gt;We're sorry but CSS Grid Generator doesn't work properly without JavaScript enabled. Please enable it to continue.&lt;/strong&gt;</noscript>
+  <div class="parent">
+    <div class="sidebar"> </div>
+    <div class="header"> </div>
+    <div class="main">
+      <h1>Yo yo</h1>
+      <p>My personal website</p>
+    </div>
+    <div class="footer"> </div>
+  </div>
+
 </body>
+
 </html>
