--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title>Christophe Portela personal website</title>
 </head>
 
 <body>
   <noscript>&lt;strong&gt;We're sorry but CSS Grid Generator doesn't work properly without JavaScript enabled. Please enable it to continue.&lt;/strong&gt;</noscript>
-  <div class="parent">
-    <div class="sidebar"> </div>
-    <div class="header"> </div>
-    <div class="main">
-      <h1>Yo yo</h1>
-      <p>My personal website</p>
+  <div class="home">
+    <div class="header">
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
     </div>
-    <div class="footer"> </div>
+    <div class="main">
+      <h1>Hi! I am Christophe Portela</h1>
+      <div class="img-text">
+        <img src="images/me.jpg">
+        <div>
+          <p>I am a passionate UI designer and web developer.</p>
+          <p>My job mostly consists to design with Sketch mockups and to develop their live HTML/CSS version to different teams within my company.</p>
+        </div>
+      </div>
+    </div>
   </div>
 
 </body>
